--- a/style.css
+++ b/style.css
@@ -1,15 +1,7 @@
-footer{
+.primeira-sessao{
     display: flex;
-    flex-direction: column;
-    background-color: #EEE8AA;
+    justify-content: center;
     align-items: center;
-    height: 10%;
-
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100vw;
-    height: 2.5rem;    
 }
 
 
